// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateActionCreatorAction empty payload 1`] = `
Object {
  "cacheLifetime": 0,
  "metadata": undefined,
  "payload": undefined,
  "principalResourceIds": undefined,
  "resourceId": "2",
  "type": "@@rest-easy/fruits/eat/REQUEST",
  "url": "eat:https://api.co/fruits",
}
`;

exports[`generateActionCreatorAction filled payload without principalResourceIds 1`] = `
Object {
  "cacheLifetime": 0,
  "metadata": undefined,
  "payload": Object {
    "fruits": Object {
      "1": "cherry",
    },
  },
  "principalResourceIds": undefined,
  "resourceId": "2",
  "type": "@@rest-easy/fruits/eat/REQUEST",
  "url": "eat:https://api.co/fruits",
}
`;

exports[`generateActionCreatorAction filled payload, array principalResourceIds 1`] = `
Object {
  "cacheLifetime": 0,
  "metadata": Object {
    "resultsCount": 1,
  },
  "payload": Object {
    "fruits": Object {
      "1": "cherry",
    },
  },
  "principalResourceIds": Array [
    "2",
  ],
  "resourceId": "2",
  "type": "@@rest-easy/fruits/eat/REQUEST",
  "url": "eat:https://api.co/fruits",
}
`;

exports[`generateActionCreatorAction filled payload, string principalResourceIds 1`] = `
Object {
  "cacheLifetime": 0,
  "metadata": Object {
    "resultsCount": 1,
  },
  "payload": Object {
    "fruits": Object {
      "1": "cherry",
    },
  },
  "principalResourceIds": Array [
    "2",
  ],
  "resourceId": "2",
  "type": "@@rest-easy/fruits/eat/REQUEST",
  "url": "eat:https://api.co/fruits",
}
`;

exports[`generateActionCreatorAction no action type 1`] = `
Object {
  "cacheLifetime": 0,
  "metadata": undefined,
  "payload": undefined,
  "principalResourceIds": undefined,
  "resourceId": undefined,
  "type": undefined,
  "url": undefined,
}
`;

exports[`generateActionCreatorAction no args 1`] = `
Object {
  "cacheLifetime": undefined,
  "metadata": undefined,
  "payload": undefined,
  "principalResourceIds": undefined,
  "resourceId": undefined,
  "type": undefined,
  "url": undefined,
}
`;

exports[`generateActionCreatorAction no id, payload 1`] = `
Object {
  "cacheLifetime": 0,
  "metadata": undefined,
  "payload": undefined,
  "principalResourceIds": undefined,
  "resourceId": undefined,
  "type": "@@rest-easy/fruits/eat/REQUEST",
  "url": "eat:https://api.co/fruits",
}
`;

exports[`generateActionCreatorAction no payload 1`] = `
Object {
  "cacheLifetime": 0,
  "metadata": undefined,
  "payload": undefined,
  "principalResourceIds": undefined,
  "resourceId": "2",
  "type": "@@rest-easy/fruits/eat/REQUEST",
  "url": "eat:https://api.co/fruits",
}
`;

exports[`generateActionCreatorAction no url, id, payload 1`] = `
Object {
  "cacheLifetime": 0,
  "metadata": undefined,
  "payload": undefined,
  "principalResourceIds": undefined,
  "resourceId": undefined,
  "type": "@@rest-easy/fruits/eat/REQUEST",
  "url": undefined,
}
`;
